--- a/librus/templates/dashboard.html
+++ b/librus/templates/dashboard.html
@@ -8,7 +8,22 @@
 {{title}}
 {% endblock %}
 {% block navbar %}
-    {% include  "includes/navbar.html" %}
+    {% if userLogin %}
+        {% include  "includes/navbar-logout.html" %}
+    {% else %}
+        {% include  "includes/navbar.html" %}
+    {% endif %}
+{% endblock %}
+{% block content %}
+<div class="container mt-3">
+    {% if userLogin %}
+        <h1>Jesteś zalogowany jako {{userLogin}}</h1>
+    {% else %}
+        <div class="alert alert-warning">
+            <a href="/login" class="alert-link">Przejdź do logowania</a>
+        </div>
+    {% endif %}
+</div>
 {% endblock %}
 
 
