--- a/librus/templates/login.html
+++ b/librus/templates/login.html
@@ -8,21 +8,29 @@
 {{title}}
 {% endblock %}
 {% block navbar %}
-    {% include  "includes/navbar.html" %}
+    {% if userLogin %}
+        {% include  "includes/navbar-logout.html" %}
+    {% else %}
+        {% include  "includes/navbar.html" %}
+    {% endif %}
 {% endblock %}
 {% block content %}
 
     <div class="container mt-2">
         <div class="row">
             <div class="col-lg-4 offset-lg-4">
+                {% if userLogin %}
+                <h1>Jesteś zalogowany jako {{userLogin}}</h1>
+                {% else %}
                 <form action="/login" method="post">
                     {{ form.hidden_tag() }}
                     {{ form.userLogin.label(class_='form-label') }}
                     {{ form.userLogin(class_='form-control') }}
-                    {{ form.userPassword.label(class_='form-control') }}
+                    {{ form.userPassword.label(class_='form-label') }}
                     {{ form.userPassword(class_='form-control') }}
                     {{ form.submit(class_='btn btn-dark mt-3 float-end') }}
                 </form>
+                {% endif %}
             </div>
         </div>
     </div>
