--- a/prosty formularz/templates/function.html
+++ b/prosty formularz/templates/function.html
@@ -10,7 +10,7 @@
     {{ title }}
 {% endblock %}
 {% block navbar %}
-    {% include  "includes/navbar.html" %}
+    {% include  "includes/navbar-logged.html" %}
 {% endblock %}
 
 {% block content %}
