--- a/librus/templates/dashboard.html
+++ b/librus/templates/dashboard.html
@@ -1,29 +1,151 @@
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% block title %} {{ title }} {% endblock %}
+
 {% block scripts %}
     {{ super() }}
+    {{ moment.include_moment() }}
+    {{ moment.locale('pl') }}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="{{ url_for('.static', filename='script.js') }}"></script>
+
+    <script>
+        const labels = [
+            'January',
+            'February',
+            'March',
+            'April',
+            'May',
+            'June',
+        ];
+
+        const data = {
+            labels: [
+                {% for subject in grades %}
+                    `{{ subject | title }}`,
+                {% endfor %}
+            ], datasets: [{
+                label: 'Średnia ocen - pierwszy semestr',
+                backgroundColor: 'rgb(255, 99, 132)',
+                borderColor: 'rgb(255, 99, 132)',
+                data: [
+                    {% for subject, terms in grades.items() %}
+                        `{{ countAverage(subject, "term1") }}`,
+                    {% endfor %}
+                ],
+            },
+                {
+                    label: 'Średnia ocen - drugi semestr',
+                    backgroundColor: 'rgb(20, 99, 132)',
+                    borderColor: 'rgb(255, 99, 132)',
+                    data: [
+                        {% for subject, terms in grades.items() %}
+                            `{{ countAverage(subject, "term2") }}`,
+                        {% endfor %}
+                    ],
+                }
+            ]
+        };
+
+        const config = {
+            type: 'bar',
+            data: data,
+            options: {}
+        };
+        const myChart = new Chart(
+            document.getElementById('myChart'),
+            config
+        );
+    </script>
+
 {% endblock %}
 
-{% block title %}
-{{title}}
-{% endblock %}
 {% block navbar %}
     {% if userLogin %}
-        {% include  "includes/navbar-logout.html" %}
+        {% include "includes/navbar-logged.html" %}
     {% else %}
-        {% include  "includes/navbar.html" %}
+        {% include "includes/navbar-logged.html" %}
     {% endif %}
 {% endblock %}
+
+{% block body_attribs %} onload="startTimer()" {% endblock %}
 {% block content %}
-<div class="container mt-3">
-    {% if userLogin %}
-        <h1>Jesteś zalogowany jako {{userLogin}}</h1>
-    {% else %}
-        <div class="alert alert-warning">
-            <a href="/login" class="alert-link">Przejdź do logowania</a>
-        </div>
-    {% endif %}
-</div>
+    <div class="mt-2 mx-2">
+        {% if userLogin %}
+            <div class="row mb-1">
+                <div class="col-lg-2">
+                    <div class="card">
+                        <div class="card-header text-secondary h5">
+                            Twoja średnia
+                        </div>
+                        <div class="card-body">
+                            <p class="text-center h2">{{ countAverage("","") }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="card-header text-secondary h5">
+                            Przedmioty - najwyższa średnia
+                        </div>
+                        <div class="card-body">
+                            <p class="lead text-success">
+                                Informatyka <span class="badge bg-success">4,1</span>
+                                Matematyka <span class="badge bg-success">3,8</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="card-header text-secondary h5">
+                            Przedmioty - zagrożenia
+                        </div>
+                        <div class="card-body">
+                            <p class="lead text-danger">
+                                chemia, plastyka
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="text-center lead">
+                                {{ moment(date).format('DD MMMM YYYY') }}
+                            </p>
+                            <p class="text-center lead" id="time">
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="alert alert-secondary text-muted h5">
+                        Twoje oceny
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    {% include "includes/gradesTab.html" %}
+                </div>
+            </div>
+            <div class="row mb-5">
+                <div class="col-lg-12 mb-5">
+                    <canvas id="myChart"></canvas>
+                </div>
+            </div>
+        {% else %}
+            <div class="alert alert-warning">
+                Nie jesteś zalogowany
+                <a href="/login" class="alert-link">Przejdź do strony logowania</a>
+            </div>
+        {% endif %}
+
+    </div>
+    {% include "includes/footer.html" %}
 {% endblock %}
-
-
