--- a/librus/templates/index.html
+++ b/librus/templates/index.html
@@ -1,13 +1,22 @@
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% block title %} {{title}} {% endblock %}
+
 {% block scripts %}
     {{ super() }}
+    {{ moment.include_moment() }}
+    {{ moment.locale('pl') }}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 {% endblock %}
 
-{% block title %}
-{{title}}
-{% endblock %}
 {% block navbar %}
-    {% include  "includes/navbar.html" %}
+    {%  if userLogin %}
+    {% include "includes/navbar-logged.html" %}
+    {% else %}
+    {% include "includes/navbar-logged.html" %}
+    {% endif %}
 {% endblock %}
 
+{% block content %}
+    {% include "includes/footer.html" %}
+{% endblock %}
